# artifact-manager

./: .gitignore  Dockerfile  README.md  artifactmgr.ini  docker-compose.yml  docker-entrypoint.sh  dumpdata.sh  env.template  manage.py  pyproject.toml  requirements.txt  run_server.sh
artifactmgr/apps/apiuser/: apps.py  models.py
artifactmgr/apps/apiuser/migrations/: 0001_initial.py
artifactmgr/apps/artifacts/: apps.py  forms.py  models.py  urls.py  views.py
artifactmgr/apps/artifacts/api/: artifact_serializers.py  artifact_viewsets.py  author_serializers.py  author_viewsets.py  tag_serializers.py  tag_viewsets.py  validators.py  version_serializers.py  version_viewsets.py  viewsets.py
artifactmgr/apps/artifacts/fixtures/: artifacts.json  artifacts.json.orig
artifactmgr/apps/artifacts/migrations/: 0001_initial.py
artifactmgr/apps/artifacts/templatetags/: artifact_tags.py
artifactmgr/server/: api_filters.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
artifactmgr/templates/artifactmgr/: base.html  footer.html  home.html  navbar.html
artifactmgr/templates/artifacts/: artifact_create.html  artifact_detail.html  artifact_list.html  artifact_update.html  author_detail.html  author_list.html  project_detail.html  project_list.html
artifactmgr/utils/: artifact_version_storage.py  core_api.py  fabric_auth.py
compose/: docker-compose.yml.local-ssl  docker-compose.yml.prod-ssl
nginx/: default.conf
scripts/: publish-to-public.sh
versions/: README.md
versions/migration_scripts/: v0_9_0-to-v1_0_0.py
vouch/: config.template
(+6 files in other folders)
